@@ -1,3 +1,8 @@
+Sun Mar 21 18:17:43 1999  Per Bothner  <bothner@Magnus.Cygnus.COM>
+
+	* streams.sc:  Removed (merged into kawa/lib/emacs.scm).
+	* Makefile.am:  Update accordingly.
+
 Sun Mar 21 11:04:19 1999  Per Bothner  <bothner@Magnus.Cygnus.COM>
 
 	New directory.
